--- a/index.html
+++ b/index.html
@@ -1,13 +1,73 @@
 <!doctype html>
 <html lang="pt-br">
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap</title>
-    <link rel = "stylesheet" href = "css/bootstrap.min.css">
+    <title> Fintech FIAP - Criando uma conta </title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <link rel ="stylesheet" href="css/style.css">
 </head>
+
 <body>
 
-    <script src = "js/bootstrap.min.js"></script>
+    <div class="container-fluid custom-container">
+        <h1 class="text-light"> Fintech FIAP </h1>
+    </div>  
+    
+    <div class="container head-container">
+        <h2 class="text-light"> Cadastro </h2>
+    </div>
+
+    <div class="container">
+        <form action="" id="cadastro" name="cadastro" method="post">
+            <div class="row border rounded p-3">
+
+                <div class="col-12 col-md-6 my-2">
+                    <label for="nome" class="form-label">Nome completo</label>
+                    <input type="text" class="form-control" id="nome" placeholder="Ex: Fulano de Tal da Silva">
+                </div>
+
+                <div class="col-12 col-md-6 my-2">
+                    <label for="cpf" class="form-label">CPF</label>
+                    <input type="text" class="form-control" id="nome" placeholder="Ex: 012.345.678-90">
+                </div>
+
+                <div class="col-12 col-md-6 my-2">
+                    <label for="dtnasc">Data de Nascimento</label>
+                    <input type="date" class="form-control" id="dob" name="dtnasc">
+                </div>
+            
+                <div class="col-12 col-md-6 my-2">
+                    <label for="email" class="form-label">e-mail</label>
+                    <input type="email" class="form-control" id="email" placeholder="Ex: email@email.com">
+                </div>
+
+                <div class="col-12 col-md-6 my-2">
+                    <label for="senha" class="form-label">Senha</label>
+                    <input type="password" class="form-control" id="senha" placeholder="Ex: 123456abc">
+                </div>
+
+                <div class="col-12 col-md-6 my-2">
+                    <p>Tipo de conta</p>
+                    <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="radio" name="conta" id="conta1" value="1">
+                        <label class="form-check-label" for="conta1">Corrente</label>
+                    </div>
+                    <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="radio" name="conta" id="conta2" value="2">
+                        <label class="form-check-label" for="conta2">Poupança</label>
+                    </div>
+
+                </div>
+                <div class="d-flex justify-content-end mt-4">
+                    <input type="submit" class="btn btn-primary" value="Criar Conta">
+                </div>
+            </div>
+        </form>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+
 </body>
 </html>
