--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
 
                 <div class="col-12 col-md-6 my-2">
                     <label for="cpf" class="form-label">CPF</label>
-                    <input type="text" class="form-control" id="nome" placeholder="Ex: 012.345.678-90">
+                    <input type="text" class="form-control" id="cpf" placeholder="Ex: 012.345.678-90">
                 </div>
 
                 <div class="col-12 col-md-6 my-2">
                     <label for="dtnasc">Data de Nascimento</label>
-                    <input type="date" class="form-control" id="dob" name="dtnasc">
+                    <input type="date" class="form-control" id="dtnasc" name="dtnasc">
                 </div>
             
                 <div class="col-12 col-md-6 my-2">
@@ -50,10 +50,12 @@
 
                 <div class="col-12 col-md-6 my-2">
                     <p>Tipo de conta</p>
+
                     <div class="form-check form-check-inline">
                         <input class="form-check-input" type="radio" name="conta" id="conta1" value="1">
                         <label class="form-check-label" for="conta1">Corrente</label>
                     </div>
+                    
                     <div class="form-check form-check-inline">
                         <input class="form-check-input" type="radio" name="conta" id="conta2" value="2">
                         <label class="form-check-label" for="conta2">Poupança</label>
